[package]
name = "tuple_set"
version = "0.1.0"
edition = "2024"
authors = ["Luca Cappelletti"]
description = "Ergonomic utilities for working with Rust tuples by unique types, not position"
readme = "README.md"
repository = "https://github.com/LucaCappelletti94/tuple_set"
license = "MIT"
keywords = ["tuple", "type", "utilities", "ergonomic", "indexed"]
categories = ["data-structures", "no-std", "rust-patterns"]

[dependencies]

[workspace.lints.rust]
missing_docs = "forbid"
unused_macro_rules = "forbid"
unconditional_recursion = "forbid"
unreachable_patterns = "forbid"
unused_import_braces = "forbid"
unused_must_use = "forbid"
deprecated = "deny"

[workspace.lints.clippy]
unreadable_literal = "allow"
missing_panics_doc = "allow"
new_ret_no_self = "allow"
struct_excessive_bools = "allow"
should_panic_without_expect = "allow"
doc_markdown = "allow"
clone_on_copy = "forbid"
pedantic = { level = "deny", priority = -1 }